# manus-agent

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
manus/: __init__.py  _subagent_runner.py  agent.py  cli.py  config.py  context.py  knowledge.py  llm.py  observability.py  pac1_runner.py  skills_loader.py  subagent.py  todo_tracker.py  workspace.py
manus/prompts/: system.md
manus/prompts/knowledge/: cloudru_models.md
manus/prompts/playbooks/: _index.json  browsing.md  content.md  research.md
manus/prompts/roles/: critic.md  debugger.md  executor.md  planner.md  researcher.md
manus/skills/browsing/: SKILL.md
manus/skills/content/: SKILL.md
manus/skills/pac1/: SKILL.md
manus/skills/research/: SKILL.md
manus/tools/: __init__.py  base.py  bitgn_vault.py  browser.py  code.py  deploy.py  file_ops.py  idle.py  image.py  lifecycle.py  memory_tools.py  message.py  search.py  shell.py  skills_tool.py  subagent_tool.py  todo.py
tests/: conftest.py  test_compaction.py  test_e2e_mock.py  test_registry.py  test_skills_loader.py  test_smoke.py
